Fix up some build scripts and paths

--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
   },
   "scripts": {
     "start": "npm run build:watch",
-    "serve": "browser-sync start --server --files \"docs/index.html, css/tachyons.css\"",
+    "serve": "(cd docs && browser-sync start --server --files \"index.html, tachyons.css\")",
     "mutations": "immutable-css src/tachyons.css --strict",
     "build": "npm run build:css && npm run build:minify",
-    "build:css": "tachyons src/tachyons.css > css/tachyons.css",
+    "build:css": "tachyons src/tachyons.css > css/tachyons.css && cp css/tachyons.css docs/tachyons.css",
     "build:minify": "tachyons src/tachyons.css --minify > css/tachyons.min.css",
     "build:watch": "watch \"npm run build\" ./src/"
   }
